--- a/src/components/Modal/Modal.module.scss
+++ b/src/components/Modal/Modal.module.scss
@@ -7,7 +7,7 @@
 
   &__wrapper {
     position: relative;
-    padding: 30px 30px 30px 38px;
+
     width: 920px;
     height: 610px;
     border-radius: 20px;
@@ -18,6 +18,7 @@
     justify-content: space-between;
   }
   &__left {
+    padding: 30px 40px;
     width: 540px;
     display: flex;
     justify-content: center;
@@ -33,8 +34,9 @@
     padding: 30px;
     width: 380px;
     height: 610px;
-    -ms-overflow-style: none; /* IE and Edge */
-    scrollbar-width: none; /* Firefox */
+    -ms-overflow-style: none;
+    scrollbar-width: none;
+    background-color: #fcfcfc;
   }
 
   &__title {
@@ -46,7 +48,6 @@
     margin-top: 3px;
     color: #73798c;
     font-size: 14px;
-    font-weight: 400;
   }
 
   &__desc {
@@ -54,7 +55,6 @@
     color: #4d4d4d;
     font-family: Arial;
     font-size: 13px;
-    font-weight: 400;
     padding-bottom: 10px;
   }
 
@@ -71,14 +71,12 @@
     justify-content: space-between;
     align-items: center;
     font-size: 12px;
-    font-weight: 400;
     width: 320px;
     height: 32px;
     border-radius: 100px;
     background: #f3f3f7;
   }
-  &__choice button {
-  }
+
   &__choice button:nth-child(2) {
     width: 104px;
     height: 28px;
@@ -88,7 +86,7 @@
   }
 
   &__cards {
-    padding: 30px 0;
+    padding: 30px 0 60px;
     display: grid;
     gap: 10px;
     grid-template-columns: repeat(3, 1fr);
@@ -96,6 +94,9 @@
 
   &__addBtn {
     position: absolute;
+    overflow: hidden;
+    background: #fcfcfc;
+    padding: 5px 5px 30px;
     bottom: 0;
   }
 
