--- a/src/components/Card/Card.module.scss
+++ b/src/components/Card/Card.module.scss
@@ -31,6 +31,12 @@
     font-size: 14px;
   }
 
+  &__price {
+    color: #000;
+    font-size: 16px;
+    font-weight: 600;
+  }
+
   &__bottom {
     margin-top: 11px;
     width: 250px;
