--- a/src/components/CardIngredients/CardIngredients.module.scss
+++ b/src/components/CardIngredients/CardIngredients.module.scss
@@ -1,6 +1,14 @@
 .card {
-  img {
+  &__img {
     flex: 1;
+  }
+
+  &__icon {
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    height: 14px;
+    width: 14px;
   }
 
   &__title {
@@ -17,6 +25,7 @@
   }
 
   &__btn {
+    position: relative;
     padding: 3px 9px 10px 10px;
     border: none;
     background: inherit;
@@ -28,5 +37,9 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+  }
+
+  &_selected {
+    border: 1px solid #f96900;
   }
 }
