--- a/src/components/Section/Section.module.scss
+++ b/src/components/Section/Section.module.scss
@@ -4,7 +4,7 @@
   &__wrapper {
     margin-top: 40px;
     display: grid;
-    gap: 20px;
+    gap: 60px 20px;
     grid-template-columns: repeat(4, auto);
   }
 }
