--- a/src/components/CartItem/CartItem.module.scss
+++ b/src/components/CartItem/CartItem.module.scss
@@ -30,6 +30,12 @@
     font-size: 12px;
   }
 
+  &__ingredients {
+    color: #73798c;
+    font-size: 10px;
+    max-width: 200px;
+  }
+
   &__right {
     width: 270px;
     display: flex;
