--- a/src/components/Section/Section.module.scss
+++ b/src/components/Section/Section.module.scss
@@ -11,6 +11,9 @@
 
 @media screen and (max-width: 431px) {
   .products {
+    &:first-child {
+      padding-top: 0;
+    }
     &__wrapper {
       gap: 0;
       display: flex;
