--- a/src/components/CallNumber/CallNumber.module.scss
+++ b/src/components/CallNumber/CallNumber.module.scss
@@ -18,3 +18,11 @@
     opacity: 0.5;
   }
 }
+
+@media screen and (max-width: 431px) {
+  .call {
+    &__tel {
+      display: none;
+    }
+  }
+}
