--- a/src/components/FooterBottom/FooterBottom.module.scss
+++ b/src/components/FooterBottom/FooterBottom.module.scss
@@ -65,6 +65,11 @@
       border: none;
       flex-direction: column-reverse;
     }
+    &__wrapper {
+      flex-direction: column-reverse;
+      align-items: start;
+    }
+
     &__social {
       width: 100%;
       border-bottom: 1px solid rgba(255, 255, 255, 0.1);
