--- a/src/components/NavPanel/NavPanel.module.scss
+++ b/src/components/NavPanel/NavPanel.module.scss
@@ -23,8 +23,16 @@
     &::-webkit-scrollbar {
       display: none;
     }
+
+    &__fixed {
+      position: fixed;
+      top: 40px;
+      background: #fff;
+      box-shadow: 0px 5px 25px 0px rgba(115, 121, 140, 0.1);
+      padding: 13px 0;
+    }
     &__lists {
-      margin-left: 16px;
+      margin: 0 16px;
       gap: 8px;
     }
     &__list {
